completed the frontend

--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,1 +1,50 @@
-<h1> This is the index page </h1>
+<h4 class="ui center aligned icon header">
+  <i class="circular blue comment icon"></i>
+  Write Something
+</h4>
+<div class= "ui two column grid">
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui feed message-section">
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                 <em>Christian Rocha:</em> signed up for the  site.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="extra content">
+        <form class="ui reply form">
+        <div class="field">
+          <div class="ui fluid icon input">
+            <input type="text" placeholder="Enter a message.....">
+            <i class="bordered inverted blue edit icon"></i>
+          </div>
+        </div>
+
+      </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="four wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui vertical pointing menu">
+          <a class="item">
+            Home
+          </a>
+          <a class="item active">
+            Messages
+          </a>
+          <a class="item">
+            Friends
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
