--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -7,13 +7,7 @@
     <div class="ui fluid raised card chatbox">
       <div class="content">
         <div class="ui feed message-section">
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                 <em>Christian Rocha:</em> signed up for the  site.
-              </div>
-            </div>
-          </div>
+          <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
