--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,6 @@
 <div class="ui small inverted menu">
   <div class="ui container">
-  <a class="item">
-    Chatroom
-  </a>
+  <%= link_to "Chatroom", root_path, class:"item"%>
   <a class="item">
     Messages
   </a>
@@ -10,14 +8,19 @@
     <div class="ui dropdown item">
       Account <i class="dropdown icon"></i>
       <div class="menu">
-        <a class="item">Logout</a>
-        <a class="item">Login</a>
-        <a class="item">Signup</a>
+        <% if logged_in? %>
+          <%= link_to "Sign Out", signout_path, method: :delete, class: "item" %>
+        <% else %>
+          <%= link_to "Sign In", signin_path, class: "item" %>
+          <a class="item">Signup</a>
+        <% end %>
       </div>
     </div>
-    <div class="item">
-        <div class="ui primary button">Sign Up</div>
-    </div>
+    <% if !logged_in? %>
+      <div class="item">
+        <%= link_to "Sign In", signin_path, class: "ui primary button" %>
+      </div>
+    <% end%>
   </div>
 </div>
 </div>
