--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -11,15 +11,14 @@
         </div>
       </div>
       <div class="extra content">
-        <form class="ui reply form">
-        <div class="field">
-          <div class="ui fluid icon input">
-            <input type="text" placeholder="Enter a message.....">
-            <i class="bordered inverted blue edit icon"></i>
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: messages_path) do |f| %>
+          <div class="field">
+            <div class="ui fluid icon input">
+            <%= f.text_field :body, placeholder:"Enter a message....." %>
+              <%= f.button'<i class="bordered inverted blue edit icon"></i>'.html_safe %>
+            </div>
           </div>
-        </div>
-
-      </form>
+        <% end %>
       </div>
     </div>
   </div>
